# AutoTicket-ML

./: README.md  pyproject.toml
ml-service/: config.py  main.py  prueba.py
ml-service/kafka/: consumer.py  producer.py
ml-service/schemas/: TicketCompletedEvent.avsc  TicketFailedEvent.avsc  TicketProcessingEvent.avsc  TicketRequestEvent.avsc
